--- a/MonriContactForm.App/MonriContactForm.App.csproj
+++ b/MonriContactForm.App/MonriContactForm.App.csproj
@@ -14,4 +14,9 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MonriContactForm.Core\MonriContactForm.Core.csproj" />
+    <ProjectReference Include="..\MonriContactForm.Infrastructure\MonriContactForm.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
