Database connection established

--- a/MonriContactForm.Infrastructure/MonriContactForm.Infrastructure.csproj
+++ b/MonriContactForm.Infrastructure/MonriContactForm.Infrastructure.csproj
@@ -7,7 +7,27 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Data\SqlScripts\Migrations\CreateDatabase.sql" />
+    <None Remove="Data\SqlScripts\Migrations\CreateTables.sql" />
+    <None Remove="Data\SqlScripts\Users\Create.sql" />
+    <None Remove="Data\SqlScripts\Users\GetByEmail.sql" />
+    <None Remove="Data\SqlScripts\Users\Update.sql" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Data\SqlScripts\Migrations\CreateDatabase.sql" />
+    <EmbeddedResource Include="Data\SqlScripts\Migrations\CreateTables.sql" />
+    <EmbeddedResource Include="Data\SqlScripts\Users\Create.sql" />
+    <EmbeddedResource Include="Data\SqlScripts\Users\GetByEmail.sql" />
+    <EmbeddedResource Include="Data\SqlScripts\Users\Update.sql" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MonriContactForm.Core\MonriContactForm.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.1" />
   </ItemGroup>
 
 </Project>
