Saving and updating user info implemented

--- a/MonriContactForm.App/appsettings.json
+++ b/MonriContactForm.App/appsettings.json
@@ -2,6 +2,7 @@
     "ConnectionStrings": {
         "SqlConnection": "Server=.;Database=ContactForm;Integrated Security=true;TrustServerCertificate=true"
     },
+    "UsersApiUrl": "http://jsonplaceholder.typicode.com/users",
     "Logging": {
         "LogLevel": {
             "Default": "Information",
