Rate limiting implemented

--- a/MonriContactForm.App/appsettings.json
+++ b/MonriContactForm.App/appsettings.json
@@ -3,6 +3,18 @@
         "SqlConnection": "Server=.;Database=ContactForm;Integrated Security=true;TrustServerCertificate=true"
     },
     "UsersApiUrl": "http://jsonplaceholder.typicode.com/users",
+    "IpRateLimiting": {
+        "EnableEndpointRateLimiting": true,
+        "StackBlockedRequests": false,
+        "RealTime": true,
+        "GeneralRules": [
+            {
+                "Endpoint": "POST:/contact-form",
+                "Period": "1m",
+                "Limit": 1
+            }
+        ]
+    },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
