Sending emails implemented

--- a/MonriContactForm.App/appsettings.json
+++ b/MonriContactForm.App/appsettings.json
@@ -15,6 +15,11 @@
             }
         ]
     },
+    "Email": {
+        "ApiKey": "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",
+        "FromEmail": "contactform.789@gmail.com",
+        "FromName": "Contact Form"
+    },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
