Logging and exception handling implemented

--- a/MonriContactForm.App/appsettings.json
+++ b/MonriContactForm.App/appsettings.json
@@ -26,5 +26,28 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-    "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "Serilog": {
+        "MinimumLevel": {
+            "Default": "Information",
+            "Override": {
+                "Microsoft": "Warning",
+                "System": "Warning"
+            }
+        },
+        "WriteTo": [
+            { "Name": "Console" },
+            {
+                "Name": "File",
+                "Args": {
+                    "path": "logs/log.txt",
+                    "rollingInterval": "Day"
+                }
+            }
+        ],
+        "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+        "Properties": {
+            "Application": "ContactForm"
+        }
+    }
 }
