--- a/MonriContactForm.Core/MonriContactForm.Core.csproj
+++ b/MonriContactForm.Core/MonriContactForm.Core.csproj
@@ -15,15 +15,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<Folder Include="Constants\" />
-		<Folder Include="Exceptions\" />
-		<Folder Include="Models\Responses\" />
-	</ItemGroup>
-
-	<ItemGroup>
 		<PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.1" />
 		<PackageReference Include="Microsoft.Extensions.Options" Version="9.0.3" />
 		<PackageReference Include="SendGrid" Version="9.29.3" />
+		<PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
 	</ItemGroup>
 
 </Project>
